<resources>
    <string name="app_name">Rewards Book</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_customer_events">Create Reward Events for Customers</string>
    <string name="created_event_string">Event Created History</string>
    <string name="get_free_watch_on_purchases_above_1000_rs_try_your_luck_to_get_rewarded">Get a
        <b>free watch</b> on purchases of <b>Rs 1000 </b>or above. Try your luck to get rewarded.</string>
    <string name="get_free_water_bottle_on_purchases_of_rs_500_or_above_try_your_luck_to_get_rewarded">Get <b>free water</b> bottle on purchases of <b>Rs 500</b> or above. Try your luck to get rewarded.</string>
    <string name="time_duration_for_receipt"></string>
    <string name="to_avail_this_offer_you_must_have_to_upload_this">To avail this offer, you must have to upload your valid bill receipt.</string>
    <string name="win_details">If you won, you will get app notification on <b>10 pm</b> of offer end date.</string>
    <string name="hindi_content">से अधिक की खरीद पर, हर</string>
    <string name="no_data_available">No events added yet.</string>
    <string name="msg_subscribed">MessageReceived</string>
    <string name="msg_subscribe_failed">Failed to receive message</string>
    <string name="no_history_txt">No History</string>


    <integer-array name="progress_colors">
        <item>@color/yellow_500</item>
        <item>@color/blue_700</item>
        <item>@color/red</item>
    </integer-array>
    <color name="yellow_500">#FFEA00</color>
    <color name="blue_700">#3C36F4</color>
</resources>