<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/create_rewards_events_for_cust"
            android:icon="@drawable/ic_baseline_event_seat_24"

            android:contentDescription="@string/time_duration_for_receipt"
            android:title="@string/menu_customer_events" />
        <item
            android:id="@+id/nav_event_created_history"
            android:icon="@drawable/ic_round_history_24"
            android:iconTint="@color/black"
            android:title="@string/created_event_string" />
        <item
            android:id="@+id/nav_logoutbutton"
            android:title="Logout" />
    </group>

</menu>