<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.creator.rewardsapp.Body.OfferWalls.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/create_rewards_events_history"
        android:name="com.creator.rewardsapp.Body.OfferWalls.ui.gallery.CreateRewardEventForCustomers"
        android:label="@string/menu_customer_events"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_event_created_history"
        android:name="com.creator.rewardsapp.Body.OfferWalls.ui.slideshow.SlideshowFragment"
        android:label="@string/created_event_string"
        tools:layout="@layout/fragment_slideshow" />
</navigation>